# subbu_project

./: .gitattributes  1  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  Jenkinsfile.txt  LICENSE  Makefile  README.md  SUPPORT.md  WSMESSAGE.md  config.json  make  makefile  new_build_number.txt  package.json  single_linked_list.c  test_results.txt  test_results.xml
.github/build_numbers/: build_numbers.json  build_numbers_status.json  new_build_number.txt
.github/workflows/: .trigger-jenkins-build.yml.swp  Regression_build.yml  cmake-jenkins-build-ubuntu.yml  cmake-single-platform.yml  codeql.yml  manual.yml  trigger-jenkins-build.yml  welcome_readme.yml
OtherFiles/: jenkins_git_tagger.sh
artifacts/archive/: CMakeLists.txt
artifacts/archive/.github/build_numbers/: build_numbers_status.json
artifacts/archive/OtherFiles/: jenkins_git_tagger.sh
artifacts/archive/artifacts/archive/.github/build_numbers/: build_numbers_status.json
artifacts/archive/artifacts/archive/.github/workflows/: cmake-jenkins-build-ubuntu.yml  trigger-jenkins-build.yml
artifacts/archive/artifacts/archive/OtherFiles/: build.js  test_regression.py
artifacts/archive/artifacts/archive/artifacts/archive/.github/workflows/: trigger-jenkins-build.yml
artifacts/archive/artifacts/archive/artifacts/archive/OtherFiles/: package.json
artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/: config.json
artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/.github/build_numbers/: build_numbers_status.json
artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/.github/workflows/: cmake-jenkins-build-ubuntu.yml
artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/: README.md
artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/.github/workflows/: cmake-jenkins-build-ubuntu.yml  trigger-jenkins-build.yml
artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/: Makefile
artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/src/Output_Files/: Selection_sort_output.txt
artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/test/: test_manage.c
artifacts/archive/artifacts/archive/artifacts/archive/artifacts/archive/src/: numbers_to_word_conversion.c  sum_of_unique_array_elements.c
artifacts/archive/artifacts/archive/artifacts/archive/src/: bitwise_add_subtraction_operators.c  manage.c
artifacts/archive/artifacts/archive/artifacts/archive/test/: test_maximum_element.c  test_sum_of_unique_array_elements.c
artifacts/archive/artifacts/archive/test/: CMakeLists.txt  test_bitwise_add_subtraction.c  test_sum_of_unique_array_elements.c
artifacts/archive/src/: sum_of_unique_array_elements.c
artifacts/archive/test/: test_manage.c  test_maximum_element.c  test_numbers_to_word_conversion.c  test_selection_sort.c
include/: binary_linked_list.h  bitwise_add_subtraction_operators.h  bubble_sort_and_binary_search_array.h  double_linked_list.h  manage.h  maximum_element_in_Array.h  morse_conversion_viceversa.h  numbers_to_word_conversion.h  pattern_gen.h  print_char_indexing_string.h  selection_sort.h  single_linked_list.h  sll_with_bsts.h  sum_of_unique_array_elements.h  sum_the_ip_addr_octets.h  temperature_conver.h
scripts/: jenkins_git_tagger.sh  send_mail.py
src/: CMakeLists.txt  binary_linked_list.c  bitwise_add_subtraction_operators.c  bubble_sort_and_binary_search_array.c  circular_double_linked_list.c  double_linked_list.c  manage.c  maximum_element_in_Array.c  morse_conversion_viceversa.c  motor_bike_operations.c  numbers_to_word_conversion.c  pattern_gen.c  print_char_indexing_string.c  selection_sort.c  single_linked_list.c  single_linked_list_v1.c  single_linked_list_v2.c  sll_with_bsts.c  sum_of_unique_array_elements.c  sum_the_ip_addr_octets.c  temperature_conver.c
src/Output_Files/: BinaryLL.txt  DoubleLinkedList.txt
src/student_info/: Output.txt  student_info.h  student_ll  student_ll.c
test/: CMakeLists.txt  run_tests.c  run_tests.c.c  test_bitwise_add_subtraction.c  test_bubble_sort_and_binary_search.c  test_manage.c  test_maximum_element.c  test_numbers_to_word_conversion.c  test_selection_sort.c  test_student_info.c  test_sum_of_unique_array_elements.c  test_utils.h
tools/: generate_headers  generate_headers.c
